--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
 APP_NAME=Webbee_Test
 APP_ENV=local
-APP_KEY=base64:QOz1K6l4udI9PKPZIEFYyRv7mIS9XadFH0omcptXW8E=
+APP_KEY=base64:ix/is7t8KvAgawFF0bketMFWEr4J+kp3kNgtgQbP6HY=
 APP_DEBUG=true
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3305
+DB_DATABASE=bamboo
+DB_USERNAME=root
+DB_PASSWORD=
